2000-09-08  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/arm/lockf64.c: New file.

	* sysdeps/unix/sysv/linux/arm/fcntl.c: New file.

	* sysdeps/unix/sysv/linux/arm/bits/fcntl.h
	(F_GETLK64,F_SETLK64,F_SETLKW64): Use values from 2.4.0-test8.
	(F_GETLK,F_SETLK,F_SETLKW): Handle __USE_FILE_OFFSET64 correctly.

2000-09-07  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/tst-tables.sh: Enable EUC-KR test.

	* elf/dl-load.c (lose): Decrement _nl_loaded.
	(_dl_map_object_from_fd): Don't try to dlopen executables.

	* iconvdata/tst-tables.sh: Actually return with an error if
	something goes wrong.
	* iconvdata/tst-table.sh: Return with an error if any of the cmp fails.
	* iconvdata/big5hkscs.c (BODY of FROM_LOOP): Reject 0xff as input.

	* iconvdata/tst-tables.sh: Add BIG5HKSCS.

	* iconvdata/tst-table-to.c (main): Correct cast in iconv call.
	* iconvdata/tst-table-from.c: Include <string.h>.
	(try): Correct cast in iconv call.

	* elf/Makefile (all-rtld-routines): Evaluate $(sysdep-rtld-routines)
	too.
	* sysdeps/powerpc/Makefile (sysdep-rtld-routines): New variable.
	(sysdep_routines): Remove dl-start.
	Patches by Franz Sirl <Franz.Sirl-kernel@lauterbach.com>.

	* assert/__assert.c: Undefine NDEBUG before include <assert.h>.

	* sysdeps/unix/sysv/linux/msgsnd.c (msgsnd): Add cast to avoid warning.
	* sysdeps/unix/sysv/linux/shmat.c (shmat): Likewise.

2000-09-06  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/bits/time.h: New file.

2000-09-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/gethostid.c: Find hostid file in /etc.

	* scripts/config.sub: Strip out -unknown for Linux targets.
	Patch by Scott Bambrough <scottb@netwinder.org>.

	* posix/tst-dir.c (main): Correct one bug (missing NULL test) and
	add one more test.

2000-09-07  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/lockf64.c: New file.

	* sysdeps/unix/sysv/linux/i386/fcntl.c: Add prototypes for the
	syscalls.
